# DeepSSIM

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: compute_fsim.py  compute_matrix.py  compute_ssim.py  deepssim_train.py  eval.py  eval_ssim.py  ldm_generate.py  ldm_train_diff.py  ldm_train_vae.py  plot_reports.py
src/datasets/: chen.py  dar.py  deepssim.py  semdedup.py
src/diffusion/: networks.py  sampling.py  transforms.py
src/extractors/: base.py  chen.py  dar.py  deepssim.py  semdedup.py
src/factories/: base.py  chen.py  dar.py  deepssim.py  registry.py  semdedup.py
src/scorers/: base.py  chen.py  dar.py  deepssim.py  semdedup.py
src/train/: dataset.py  embedder_net.py  similarity_net.py
src/utils/: diffusion.py  fsim.py  log.py  meter.py  model.py  plot.py  ssim.py  utils.py
tests/: test_deepssim.py  test_fsim.py  test_ssim.py
